fix blps