@@ -1,6 +1,7 @@
 package xyz.anomatver.blps.review.controller;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import xyz.anomatver.blps.auth.service.CustomUserDetailsService;
@@ -11,53 +12,72 @@ import xyz.anomatver.blps.review.service.ReviewService;
 import xyz.anomatver.blps.user.model.User;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/reviews")
 public class ReviewController {
 
-    @Autowired
-    private ReviewService reviewService;
+    private final ReviewService reviewService;
+    private final CustomUserDetailsService userDetailsService;
 
     @Autowired
-    private CustomUserDetailsService userDetailsService;
+    public ReviewController(ReviewService reviewService, CustomUserDetailsService userDetailsService) {
+        this.reviewService = reviewService;
+        this.userDetailsService = userDetailsService;
+    }
 
-    @PostMapping()
-    public ResponseEntity<String> createReview(@RequestBody CreateReviewDTO request) {
-        User user = userDetailsService.getUser();
-        reviewService.submitReview(Review.builder().title(request.getTitle())
-                .content(request.getContent())
-                .author(user)
-                .build());
-        return ResponseEntity.ok("OK");
+    @PostMapping
+    public ResponseEntity<?> createReview(@RequestBody CreateReviewDTO request) {
+        try {
+            User user = userDetailsService.getUser();
+            Review review = Review.builder()
+                    .title(request.getTitle())
+                    .content(request.getContent())
+                    .author(user)
+                    .build();
+            reviewService.submitReview(review);
+            return new ResponseEntity<>("Review submitted successfully", HttpStatus.CREATED);
+        } catch (Exception ex) {
+            return new ResponseEntity<>("Failed to submit review", HttpStatus.INTERNAL_SERVER_ERROR);
+        }
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<?> getReviewById(@PathVariable Long id) {
         Review review = reviewService.findById(id);
         if (review != null) {
-            return ResponseEntity.ok(review);
+            return new ResponseEntity<>(review, HttpStatus.OK);
         } else {
-            return ResponseEntity.notFound().build();
+            return new ResponseEntity<>("Review not found", HttpStatus.NOT_FOUND);
         }
     }
 
     @GetMapping
     public ResponseEntity<List<Review>> getAllReviews() {
-        List<Review> reviews = reviewService.findAll().stream().filter(review -> review.getStatus() == ReviewStatus.APPROVED).toList();
-        return ResponseEntity.ok(reviews);
+        List<Review> reviews = reviewService.findAll().stream()
+                .filter(review -> review.getStatus() == ReviewStatus.APPROVED)
+                .collect(Collectors.toList());
+        return new ResponseEntity<>(reviews, HttpStatus.OK);
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<Review> updateReview(@PathVariable Long id, @RequestBody Review review) {
-        Review updatedReview = reviewService.updateReview(id, review);
-        return ResponseEntity.ok(updatedReview);
+    public ResponseEntity<?> updateReview(@PathVariable Long id, @RequestBody Review reviewDTO) {
+        try {
+            Review updatedReview = reviewService.updateReview(id, reviewDTO);
+            return new ResponseEntity<>(updatedReview, HttpStatus.OK);
+        } catch (Exception ex) {
+            return new ResponseEntity<>("Failed to update review", HttpStatus.INTERNAL_SERVER_ERROR);
+        }
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deleteReview(@PathVariable Long id) {
-        reviewService.deleteReview(id);
-        return ResponseEntity.noContent().build();
+    public ResponseEntity<?> deleteReview(@PathVariable Long id) {
+        try {
+            reviewService.deleteReview(id);
+            return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+        } catch (Exception ex) {
+            return new ResponseEntity<>("Failed to delete review", HttpStatus.INTERNAL_SERVER_ERROR);
+        }
     }
-
 }
